@@ -8,13 +8,11 @@ import java.util.Random;
  */
 public class GCDemo {
     public static void main(String[] args) {
-
         String str = "strong";
         while (true){
             str += str + new Random().nextInt(11111111)+new Random().nextInt(222222222);
             str.intern();
         }
-
     }
     /*
         GC算法（引用计数/复制/标清/标整）是内存回收的方法论，垃圾收集器就是算法落地实现
@@ -65,20 +63,28 @@ public class GCDemo {
                 Serial Old收集器是Serial垃圾收集器的老年版本,单线程的收集器,使用标记-整理算法
             并行GC(Parallel Old)/(Parallel MSC)
                 Parallel Old收集器是Parallel Scavenge的老年代版本,使用多线程的标记-整理算法
-                -XX:+UseParallelOldGC
+                对应JVM参数: -XX:+UseParallelOldGC,新生代Parallel+老年代Parallel Old
+
             并发标记清除GC(CMS)
                 ConcurrentMarkSweep:并发标记清除,是一种以最短回收停顿时间为目标的收集器
                 对应JVM参数: -XX:+UseConcMarkSweepGC 开启该参数后会自动将-XX:+UseParNewGC打开,开启该参数后,使用ParNew(Young区用)+
                 CMS(Old区用)+Serial Old的收集器组合,Serial Old将作为CMS出错的后背收集器
-
                 4步过程:
                     初始标记(CMS initial mark)
-                    并发标记(CMS concurrent mark)和用户线程一起
-                    重新标记(CMS remark)
-                    并发清除(CMS concurrent sweep)和用户线程一起
-
+                    并发标记(CMS concurrent mark)和用户线程一起:主要标记过程,标记全部对象
+                    重新标记(CMS remark):为了修正在并发标记期间,因用户程序继续运行而导致标记产生变动的那一部分对象的标记记录,仍然需要暂停所有的工作线程
+                    并发清除(CMS concurrent sweep)和用户线程一起:清除GC Root不可达对象,不需要暂停工作线程,由于耗时最长的并发标记和并发清除过程中,
+                        垃圾收集线程和用户线程一起并发工作,所以总体上来看CMS收集器的内存回收和用户线程是一起并发执行
                 优缺点:
                     优点:并发收集低停顿
                     缺点:①并发执行，对CPU资源压力大;②采用的标记清除算法会导致大量碎片
+
+            G1垃圾收集器
+                整体采用标记-整理算法,局部通过复制算法,不会产生内存碎片
+
+
+               -Xms10m -Xmx10m -XX:+PrintGCDetails -XX:+UseG1GC
+
+               -Xms10m -Xmx10m -XX:+PrintGCDetails -XX:+UseConcMarkSweepGC
      */
 }
